# ltv-arpu-tracker

./: .gitignore  DESIGN.md  DEVPOST.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  ai_brief.py  analytics.py  main.py  models.py  schemas.py  seed.py  store.py
backend/tests/: test_analytics.py  test_api.py
demo/: README.md  render-frame.html  render_demo.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  demoData.ts  styles.css  types.ts
