[project]
name = "grosshacker-api"
version = "0.1.0"
description = "LTV and ARPU analytics API for mobile growth teams"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "openai>=2,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
